--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -4,7 +4,7 @@
     <p>Do you keep your games?</p>
   </div>
 
-  <div class="uk-width-auto">
+  <div class="uk-width-auto with-theme">
     <%= content_tag :a, id: 'change-theme-lp', class: "uk-button #{ current_theme == 'theme_dark' ? 'active' : '' }" do %>
     <span><%= svg('dark') %></span><span> Dark Theme</span>
     <% end %>
@@ -44,69 +44,104 @@
   </div>
 </div>
 
-<% dark_suffix = current_theme == 'theme_dark' ? '_dark' : '' %>
+<% img_mod = current_theme == 'theme_dark' ? ['hidden',''] : ['','hidden'] %>
 
 <div class="frame" uk-slideshow="ratio: 1180:643; animation: fade">
 
     <ul class="uk-slideshow-items lp-images">
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small01#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/01#{ dark_suffix }.png" => "1.8x" },
-            alt: 'video game collection viewed as game covers') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small01.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/01.png" => "1.8x" },
+            alt: 'video game collection viewed as game covers', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small01_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/01_dark.png" => "1.8x" },
+            alt: 'video game collection viewed as game covers', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">The first thing you see upon logging in is YOUR GAMES!</p>
             </div>
         </li>
 
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small02#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/02#{ dark_suffix }.png" => "1.8x" },
-            alt: 'video game collection, game info and screenshots') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small02.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/02.png" => "1.8x" },
+            alt: 'video game collection, game info and screenshots', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small02_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/02_dark.png" => "1.8x" },
+            alt: 'video game collection, game info and screenshots', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">Review each game's basic info and view screenshots.</p>
             </div>
         </li>
 
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small03#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/03#{ dark_suffix }.png" => "1.8x" },
-            alt: 'video game collection viewed as panels, open panel shows game info and screenshots') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small03.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/03.png" => "1.8x" },
+            alt: 'video game collection viewed as panels, open panel shows game info and screenshots', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small03_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/03_dark.png" => "1.8x" },
+            alt: 'video game collection viewed as panels, open panel shows game info and screenshots', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">Change between three different games views. Find the one that suits you best.</p>
             </div>
         </li>
 
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small04#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/04#{ dark_suffix }.png" => "1.8x" },
-            alt: 'video game collection viewed as a list, modal shows game info and screenshots') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small04.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/04.png" => "1.8x" },
+            alt: 'video game collection viewed as a list, modal shows game info and screenshots', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small04_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/04_dark.png" => "1.8x" },
+            alt: 'video game collection viewed as a list, modal shows game info and screenshots', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">Or, switch between them seamlessly whenever you want.</p>
             </div>
         </li>
 
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small05#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/05#{ dark_suffix }.png" => "1.8x" },
-            alt: 'search video games form with options and filters') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small05.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/05.png" => "1.8x" },
+            alt: 'search video games form with options and filters', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small05_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/05_dark.png" => "1.8x" },
+            alt: 'search video games form with options and filters', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">Search games by title, developer or character. Use basic search filters.</p>
             </div>
         </li>
 
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small06#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/06#{ dark_suffix }.png" => "1.8x" },
-            alt: 'search history') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small06.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/06.png" => "1.8x" },
+            alt: 'search history', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small06_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/06_dark.png" => "1.8x" },
+            alt: 'search history', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">Use search history to go back to previous results.</p>
             </div>
         </li>
 
         <li>
-            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small07#{ dark_suffix }.png",
-            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/07#{ dark_suffix }.png" => "1.8x" },
-            alt: 'stats and graphs about your video game collection') %>
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small07.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/07.png" => "1.8x" },
+            alt: 'stats and graphs about your video game collection', class: "light-img #{ img_mod[0] }") %>
+
+            <%= image_tag("https://still-have-them.s3.eu-central-1.amazonaws.com/small07_dark.png",
+            srcset: { "https://still-have-them.s3.eu-central-1.amazonaws.com/07_dark.png" => "1.8x" },
+            alt: 'stats and graphs about your video game collection', class: "dark-img #{ img_mod[1] }") %>
+
             <div class="lp-overlay uk-position-bottom-left">
                 <p class="uk-margin-remove">Learn more about your collection by studying stats and graphs.</p>
             </div>
@@ -217,4 +252,16 @@
 
 <script>
   changeThemeLp();
+
+
+  function removeCoverSpinner() {
+      UIkit.util.on(document, 'load', '.game-cover', function(e) {
+
+          if (!e.target.currentSrc.startsWith('data:')) {
+              $(e.target).parent().find(".spinner").remove();
+          }
+      }, true)
+  }
+
+
 </script>
