Finish change collections order form, action, js script and style.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -485,7 +485,7 @@ a.uk-notification-close {
     text-transform: none;
 }
 
-.side-menu {
+#side-menu {
     display: flex;
     height: 100%;
     align-items: center;
