--- a/app/assets/stylesheets/theme_dark.scss
+++ b/app/assets/stylesheets/theme_dark.scss
@@ -1389,3 +1389,9 @@ div.menu-shadow {
         color: #ccc;
     }
 }
+
+// Collections order
+
+.cord-ship, .cord-update {
+    border-color: #999;
+}
