--- a/app/views/collections/destroy.js.erb
+++ b/app/views/collections/destroy.js.erb
@@ -4,7 +4,7 @@ var ids = [];
 $('li[id^=mc-]').each(function(){ ids.push(this.id)});
 var index = ids.indexOf('mc-<%= @collection.id %>');
 
-$(".side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
+$("#side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
 
 var url = ''
 if ((id = ids[index-1]) != null) {
