--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -36,7 +36,7 @@
 
   <div>
     <div uk-lightbox>
-        <a class="uk-button lp-button lp-play lp-big" href="https://www.youtube-nocookie.com/watch?v=QBOeCu3ina4">
+        <a class="uk-button lp-button lp-play lp-big" href="https://www.youtube-nocookie.com/watch?v=MdUQMrKQ5IY">
         <span><%= svg 'play' %></span>
         Watch app overview
         </a>
