--- a/app/views/users/settings.js.erb
+++ b/app/views/users/settings.js.erb
@@ -14,3 +14,4 @@ UIkit.util.once($f_modal, 'hidden', function() {
 passwordUnmask();
 activateChangeEmailPassword();
 activateChangeGpv();
+activateChangeOrder();
