--- a/app/views/layouts/_sh_menu.html.erb
+++ b/app/views/layouts/_sh_menu.html.erb
@@ -1,4 +1,4 @@
-<div class="side-menu">
+<div id="side-menu">
   <ul>
     <% shared_collections.each do |collection| %>
     <li id="mc-<%= collection.id %>">
