--- a/app/views/collections/change_order.js.erb
+++ b/app/views/collections/change_order.js.erb
@@ -1,3 +1,3 @@
-var active_el_id = $('li.active').attr('id');
+var active_el_id = $('#side-menu').find("li.active").attr('id');
 $("#side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
 $('#' + active_el_id).addClass('active');
