--- a/app/views/collections/destroy.js.erb
+++ b/app/views/collections/destroy.js.erb
@@ -1,10 +1,12 @@
 UIkit.modal($("#coll-del-modal")).hide();
 
 var ids = [];
-$('li[id^=mc-]').each(function(){ ids.push(this.id)});
+var $side_menu = $("#side-menu");
+
+$side_menu.find('li[id^=mc-]').each(function(){ ids.push(this.id)});
 var index = ids.indexOf('mc-<%= @collection.id %>');
 
-$("#side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
+$side_menu.replaceWith("<%= j(render partial: 'layouts/menu') %>");
 
 var url = ''
 if ((id = ids[index-1]) != null) {
