--- a/app/views/games/cm_form.js.erb
+++ b/app/views/games/cm_form.js.erb
@@ -2,7 +2,7 @@ var needs_platform = <%= @collection.needs_platform %>;
 var form_type;
 
 <% if @view == 'list' %>
-    $("#t-ops .modal-content").html("<%= j(render partial: 'my_games/copy_form', locals: { game: @game, collection: @collection, view: @view }) %>");
+    $("#t-ops").find(".modal-content").html("<%= j(render partial: 'my_games/copy_form', locals: { game: @game, collection: @collection, view: @view }) %>");
     form_type = 'list';
     listLight('<%= @game.id %>', 't-ops');
 <% else %>
