--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -44,8 +44,10 @@ if (msg) {
         };
     }
 
-    if ($('.pr em.current').length != 0) {
-        var current_page = $('.pr em.current').text();
+    var $pagi = $('#pr').find('em.current');
+
+    if ($pagi.length != 0) {
+        var current_page = $pagi.text();
         data['page'] = current_page;
     }
 
