--- a/app/views/collections/remove_game.js.erb
+++ b/app/views/collections/remove_game.js.erb
@@ -32,7 +32,7 @@ if (rs.length != 0) {
     }
 }
 
-var $pagi = $('.pr em.current');
+var $pagi = $('#pr').find('em.current');
 
 if ($pagi.length != 0) {
     var current_page = $pagi.text();
