--- a/app/views/shared/_cover_show.html.erb
+++ b/app/views/shared/_cover_show.html.erb
@@ -95,5 +95,5 @@
 <div id="info-links">
     <%= link_to '',"http://www.google.com/search?q=%22#{ game_name.gsub(' ', '+') }%22+video+game" , class: "ex-link google uk-icon-button uk-margin-small-right", target: "_blank", "uk-icon" => "google" %>
     <%= link_to svg('metacritic_icon'),"https://www.metacritic.com/search/game/#{ game_name.gsub(' ', '%20') }/results" , class: "ex-link metacritic uk-icon-button uk-margin-small-right", target: "_blank" %>
-    <%= content_tag(:button, svg('flip_icon'), class: 'flip') %>
+    <%= content_tag(:button, svg('flip_icon'), id: 'flip') %>
 </div>
