--- a/app/views/games/copy_move.js.erb
+++ b/app/views/games/copy_move.js.erb
@@ -27,30 +27,31 @@ if (msg) {
             view: view
         };
 
-        if ($('#r-q').text().length != 0 && $('#r-s').text().length != 0) {
-            var search = $('#r-q').text().split(',');
+        var $rq = $('#r-q');
+        var rs = $rq.next().text();
+        var rq = $rq.text();
+        if ( rq != ',,on' && rq != ',,') {
+            var search = rq.split(',');
             data['q'] = {
                 name_dev_cont: search[0],
                 plat_eq: search[1],
                 physical_eq: search[2],
-                s: $('#r-s').text()
             };
-        } else if ($('#r-q').text().length != 0) {
-            var search = $('#r-q').text().split(',');
-            data['q'] = {
-                name_dev_cont: search[0],
-                plat_eq: search[1],
-                physical_eq: search[2]
-            };
-        } else if ($('#r-s').text().length != 0) {
-            data['q'] = {
-                s: $('#r-s').text()
-            };
+        }
+
+        if (rs.length) {
+            if (data['q']) {
+                data['q']['s'] = rs;
+            } else {
+                data['q'] = {
+                    s: rs
+                };
+            }
         }
 
         var $pagi = $('#pr').find('em.current');
 
-        if ($pagi.length != 0) {
+        if ($pagi.length) {
             var current_page = $pagi.text();
 
             if (!copy) {
