--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -51,18 +51,14 @@ if (msg) {
     });
 
 <% else %>
-
     var errors = "<%= j(render partial: 'add_form_errors', locals: { errors: @errors }) %>";
-
     switch (view) {
         case 'list':
-            var element = "#t-ops .add-form-errors";
-            $(element).html(errors);
+            $("#t-ops").find(".add-form-errors").html(errors);
             resetFormErrors('list', x_id)
             break;
         default:
-            var element = "#add-form-" + x_id + " .add-form-errors";
-            $(element).html(errors);
+            $("#add-form-" + x_id).find(".add-form-errors").html(errors);
             resetFormErrors('add', x_id)
     }
 <% end %>
