Refactor js files in static_pages views. Finish refactoring js files in views.

--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -1,7 +1,9 @@
 var view = '<%= view %>';
 
-$("#show-more").html("<%= j(render :partial => 'results', :locals => { view: view }) %>");
-$("#show-more").attr('id', 'showed_more');
+var $show_more = $('#show-more');
+
+$show_more.html("<%= j(render :partial => 'results', :locals => { view: view }) %>");
+$show_more.attr('id', 'showed_more');
 
 switch (view) {
     case 'list_view':
