--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -667,7 +667,7 @@ li.active:hover .opts {
 
 .search-bar {
     padding-left: 40px;
-    padding-right: 40px;
+    padding-right: 60px;
     border-radius: 5px;
     height: 40px;
     width: 400px;
@@ -1595,4 +1595,17 @@ div#top_and_back {
     opacity: 0;
     margin-top: 20px;
     transition: opacity 0.3s ease-in-out;
+}
+
+// Search Type Warning
+span#srch-type {
+    display: none;
+    position: absolute;
+    font-size: 14px;
+    right: 10px;
+    top: 8px;
+    font-style: italic;
+    color: #888888;
+    font-weight: 300;
+    pointer-events: none;
 }
