Change filter method name to filterGames

--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -29,7 +29,7 @@ switch (view) {
         break;
 }
 
-filter();
+filterGames();
 showHideToolbar(<%= shared %>);
 modifyToolbar(view);
 toggleEditMenu();
