Fix problem with collection form tile not changing form Edit to Create.

--- a/app/views/collections/new.js.erb
+++ b/app/views/collections/new.js.erb
@@ -1,4 +1,6 @@
-$("#coll-modal").find(".modal-content").html("<%= j(render 'form') %>");
+var $modal = $("#coll-modal");
+$modal.find('#coll-action').text('Create');
+$modal.find(".modal-content").html("<%= j(render 'form') %>");
 $('#collection_name').focus();
 $("#m-add-coll").addClass('active');
 remove_active_create_coll();
