Prepare working solution for moving dropdown as a test.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1613,3 +1613,14 @@ span#srch-type {
     pointer-events: none;
     background: #d4d4d4;
 }
+
+
+// Delete Test
+
+
+.test {
+    background: #b7b7b7;
+    width: 200px;
+    height: 200px;
+    margin-top: 20px;
+}
